Fix subtitle sizing on mobile

--- a/src/styles/layouts/roadmap.scss
+++ b/src/styles/layouts/roadmap.scss
@@ -80,3 +80,12 @@
     line-height: 1.1;
   }
 }
+
+.l-page-subtitle{
+
+  line-height: 1.2;
+
+  @include breakpoint($maxWidth: 830px){
+    line-height: 1;
+  }
+}
